--- a/src/continers/Header/Header.css
+++ b/src/continers/Header/Header.css
@@ -14,6 +14,5 @@
 #header #title {
   font-size: calc(10px + 2vmin);
   color: white;
-  flex-basis: content;
   flex-grow: 1;
 }
